<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".presentation.guide.GuideActivity">

    <com.google.android.material.appbar.AppBarLayout
        android:id="@+id/appbar_tips"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@color/sapphire"
        android:elevation="0dp"
        app:elevation="0dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent">

        <androidx.constraintlayout.widget.ConstraintLayout
            android:id="@+id/cl_toolbar_tips"
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

            <TextView
                android:id="@+id/tv_tips_header"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_marginStart="16dp"
                android:layout_marginTop="16dp"
                android:layout_marginEnd="16dp"
                android:layout_marginBottom="16dp"
                android:fontFamily="@font/inter_semibold"
                android:text="@string/app_name"
                android:textColor="@color/white"
                android:textSize="20sp"
                app:layout_constraintBottom_toBottomOf="@+id/cl_toolbar_tips"
                app:layout_constraintEnd_toEndOf="@+id/cl_toolbar_tips"
                app:layout_constraintStart_toStartOf="@+id/cl_toolbar_tips"
                app:layout_constraintTop_toTopOf="@+id/cl_toolbar_tips"
                tools:ignore="TextContrastCheck" />
        </androidx.constraintlayout.widget.ConstraintLayout>
    </com.google.android.material.appbar.AppBarLayout>

    <ScrollView
        android:id="@+id/sv_guide"
        android:layout_width="0dp"
        android:layout_height="0dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/appbar_tips">


        <androidx.constraintlayout.widget.ConstraintLayout
            android:id="@+id/cl_guide"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:paddingBottom="32dp">

            <TextView
                android:id="@+id/tv_tips_title"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_marginStart="24dp"
                android:layout_marginTop="32dp"
                android:layout_marginEnd="24dp"
                android:fontFamily="@font/inter_semibold"
                android:text="@string/tips_title"
                android:textAlignment="center"
                android:textColor="@color/light_black"
                android:textSize="18sp"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent"
                app:lineHeight="24sp" />

            <LinearLayout
                android:id="@+id/ll_tips_1"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_marginTop="32dp"
                android:orientation="horizontal"
                android:paddingStart="24dp"
                android:paddingEnd="24dp"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/tv_tips_title">

                <TextView
                    android:id="@+id/tv_tips_numbering_1"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginEnd="8dp"
                    android:fontFamily="@font/inter_medium"
                    android:text="@string/tips_numbering_1"
                    android:textAlignment="textStart"
                    android:textColor="@color/light_black"
                    android:textSize="14sp" />

                <TextView
                    android:id="@+id/tv_tips_content_1"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:fontFamily="@font/inter_medium"
                    android:text="@string/tips_content_1"
                    android:textAlignment="textStart"
                    android:textColor="@color/light_black"
                    android:textSize="14sp"
                    app:lineHeight="24sp" />
            </LinearLayout>

            <LinearLayout
                android:id="@+id/ll_tips_2"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_marginTop="16dp"
                android:orientation="horizontal"
                android:paddingStart="24dp"
                android:paddingEnd="24dp"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/ll_tips_1">

                <TextView
                    android:id="@+id/tv_tips_numbering_2"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginEnd="8dp"
                    android:fontFamily="@font/inter_medium"
                    android:text="@string/tips_numbering_2"
                    android:textAlignment="textStart"
                    android:textColor="@color/light_black"
                    android:textSize="14sp" />

                <TextView
                    android:id="@+id/tv_tips_content_2"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:fontFamily="@font/inter_medium"
                    android:text="@string/tips_content_2"
                    android:textAlignment="textStart"
                    android:textColor="@color/light_black"
                    android:textSize="14sp"
                    app:lineHeight="24sp" />
            </LinearLayout>

            <LinearLayout
                android:id="@+id/ll_tips_3"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_marginTop="16dp"
                android:orientation="horizontal"
                android:paddingStart="24dp"
                android:paddingEnd="24dp"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/ll_tips_2">

                <TextView
                    android:id="@+id/tv_tips_numbering_3"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginEnd="8dp"
                    android:fontFamily="@font/inter_medium"
                    android:text="@string/tips_numbering_3"
                    android:textAlignment="textStart"
                    android:textColor="@color/light_black"
                    android:textSize="14sp" />

                <TextView
                    android:id="@+id/tv_tips_content_3"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:fontFamily="@font/inter_medium"
                    android:text="@string/tips_content_3"
                    android:textAlignment="textStart"
                    android:textColor="@color/light_black"
                    android:textSize="14sp"
                    app:lineHeight="24sp" />
            </LinearLayout>

            <LinearLayout
                android:id="@+id/ll_tips_4"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_marginTop="16dp"
                android:orientation="horizontal"
                android:paddingStart="24dp"
                android:paddingEnd="24dp"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/ll_tips_3">

                <TextView
                    android:id="@+id/tv_tips_numbering_4"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginEnd="8dp"
                    android:fontFamily="@font/inter_medium"
                    android:text="@string/tips_numbering_4"
                    android:textAlignment="textStart"
                    android:textColor="@color/light_black"
                    android:textSize="14sp" />

                <TextView
                    android:id="@+id/tv_tips_content_4"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:fontFamily="@font/inter_medium"
                    android:text="@string/tips_content_4"
                    android:textAlignment="textStart"
                    android:textColor="@color/light_black"
                    android:textSize="14sp"
                    app:lineHeight="24sp" />
            </LinearLayout>
        </androidx.constraintlayout.widget.ConstraintLayout>
    </ScrollView>
</androidx.constraintlayout.widget.ConstraintLayout>