<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/constraintLayout"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".presentation.preview.PreviewActivity" >

    <com.google.android.material.appbar.AppBarLayout
        android:id="@+id/appbar_preview"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@color/sapphire"
        android:elevation="0dp"
        app:elevation="0dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent">

        <androidx.constraintlayout.widget.ConstraintLayout
            android:id="@+id/cl_toolbar_preview"
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

            <TextView
                android:id="@+id/tv_preview_header"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_marginStart="16dp"
                android:layout_marginTop="16dp"
                android:layout_marginEnd="16dp"
                android:layout_marginBottom="16dp"
                android:fontFamily="@font/inter_semibold"
                android:text="@string/app_name"
                android:textColor="@color/white"
                android:textSize="20sp"
                app:layout_constraintBottom_toBottomOf="@+id/cl_toolbar_preview"
                app:layout_constraintEnd_toEndOf="@+id/cl_toolbar_preview"
                app:layout_constraintStart_toStartOf="@+id/cl_toolbar_preview"
                app:layout_constraintTop_toTopOf="@+id/cl_toolbar_preview"
                tools:ignore="TextContrastCheck" />
        </androidx.constraintlayout.widget.ConstraintLayout>
    </com.google.android.material.appbar.AppBarLayout>

    <androidx.core.widget.NestedScrollView
        android:id="@+id/nsv_preview"
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:fillViewport="true"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/appbar_preview"
        tools:ignore="SpeakableTextPresentCheck">

        <androidx.constraintlayout.widget.ConstraintLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            android:paddingBottom="16dp">

            <TextView
                android:id="@+id/tv_preview_title"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_marginStart="24dp"
                android:layout_marginTop="48dp"
                android:layout_marginEnd="24dp"
                android:fontFamily="@font/inter_semibold"
                android:gravity="center"
                android:text="@string/preview_title"
                android:textColor="@color/light_black"
                android:textSize="20sp"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent" />

            <TextView
                android:id="@+id/tv_preview_subtitle"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_marginStart="24dp"
                android:layout_marginTop="16dp"
                android:layout_marginEnd="24dp"
                android:fontFamily="@font/inter_medium"
                android:gravity="center"
                android:text="@string/preview_subtitle"
                android:textColor="@color/light_black"
                android:textSize="16sp"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@id/tv_preview_title"
                app:lineHeight="24sp" />

            <RelativeLayout
                android:id="@+id/rl_image_preview"
                android:layout_width="match_parent"
                android:layout_height="0dp"
                android:layout_marginTop="32dp"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/tv_preview_subtitle">

                <ImageView
                    android:id="@+id/iv_image_preview"
                    android:layout_width="match_parent"
                    android:layout_height="250dp"
                    android:layout_marginStart="24dp"
                    android:layout_marginEnd="24dp"
                    android:contentDescription="@string/batik_image"
                    android:src="@drawable/dotted"
                    tools:ignore="ImageContrastCheck" />

                <TextView
                    android:id="@+id/tv_image_preview"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_alignStart="@+id/iv_image_preview"
                    android:layout_alignTop="@+id/iv_image_preview"
                    android:layout_alignEnd="@+id/iv_image_preview"
                    android:layout_alignBottom="@+id/iv_image_preview"
                    android:gravity="center"
                    android:text="@string/no_picture"
                    android:textColor="@color/grey"
                    tools:ignore="TextContrastCheck" />
            </RelativeLayout>

            <androidx.constraintlayout.widget.Guideline
                android:id="@+id/gl_preview"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:orientation="vertical"
                app:layout_constraintGuide_percent="0.5" />

            <androidx.appcompat.widget.AppCompatButton
                android:id="@+id/btn_add_remove_photo"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginStart="24dp"
                android:layout_marginTop="24dp"
                android:layout_marginEnd="24dp"
                android:fontFamily="@font/inter_semibold"
                android:letterSpacing="0"
                android:text="@string/add_photo"
                android:textAllCaps="false"
                android:textColor="@color/white"
                android:textSize="16sp"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/rl_image_preview"
                tools:ignore="TextContrastCheck" />

            <androidx.appcompat.widget.AppCompatButton
                android:id="@+id/btn_preview_submit"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginStart="24dp"
                android:layout_marginTop="16dp"
                android:layout_marginEnd="24dp"
                android:fontFamily="@font/inter_semibold"
                android:letterSpacing="0"
                android:text="@string/process"
                android:textAllCaps="false"
                android:textColor="@color/white"
                android:textSize="16sp"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/btn_add_remove_photo"
                tools:ignore="TextContrastCheck" />

        </androidx.constraintlayout.widget.ConstraintLayout>
    </androidx.core.widget.NestedScrollView>
</androidx.constraintlayout.widget.ConstraintLayout>